--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.3",
+    "motion": "^12.23.24",
     "next": "16.0.2",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
