--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.3",
     "motion": "^12.23.24",
-    "next": "16.0.2",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
-    "next-intl": "^4.5.7",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
